Fix [Nuclio] Template box is cropped when only single row (#677)

--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.less
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.less
@@ -140,6 +140,7 @@
                 display: flex;
                 position: relative;
                 flex-flow: row wrap;
+                align-items: flex-start;
                 margin-top: 32px;
 
                 .function-template-wrapper {
@@ -167,10 +168,16 @@
                         }
                     }
 
-                    &.selected {
-                        .function-template {
-                            border: 2px solid @orange;
-                            z-index: 2;
+                &.last-line.selected, &:hover.last-line {
+                    .function-template {
+                        position: relative;
+                    }
+                }
+
+                &.selected {
+                    .function-template {
+                        border: 2px solid @orange;
+                        z-index: 2;
 
                             .function-template-content {
                                 .template-create-button {
